# tesseract-pinn-inverse-burgers

./: .gitignore  README.md  app.py  configs.py  inverse_problem.py  pyproject.toml  requirements.txt
tesseracts/burgers_solver/: tesseract_api.py  tesseract_config.yaml  tesseract_requirements.txt
tests/: test_burgers_solver.py  test_configs.py  test_generate_observations.py  test_log_viscosity.py  test_loss_weights.py  test_seed_sweep.py
