[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesseract-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.0",
    "equinox>=0.13.2",
    "jax>=0.8.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "optax>=0.2.6",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "streamlit>=1.32.0",
    "tesseract-core[runtime]>=1.2.0",
    "tesseract-jax>=0.2.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.setuptools.packages.find]
include = ["tesseracts*"]
